syntax = "proto3";
package config_server;

import "protocol.proto";

option go_package = "proto.botconstructor";

service ConfigService {
    rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
}

message GetConfigRequest {
    string bot_id = 1;
}

message GetConfigResponse {
    protocol.Config config = 1;
}